--- a/index.html
+++ b/index.html
@@ -2,25 +2,87 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <!-- 关键：适配手机/平板等所有设备，自动缩放 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 页面标题（浏览器标签显示的文字） -->
-    <title>我的GitHub项目发布页</title>
-    <!-- 引入GitHub图标库（Font Awesome，不用下载，直接用） -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- 引入样式文件（和html同文件夹的style.css） -->
-    <link rel="stylesheet" href="style.css">
+    <title>星辰影院 - 官方发布页</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { background-color: #0f172a; color: white; }
+        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); }
+    </style>
 </head>
-<body>
-    <div class="container">
-        <!-- 页面主标题：可修改成你的项目名 -->
-        <h1>LH-SA影视</h1>
-        <!-- SA影视 - 不只是看片，更是生活方式 -->
-        <p>专注于优质影视内容的综合影视平台 ，欢迎Star/Fork！</p>
-        <!-- GitHub跳转按钮：★ 必须修改这里的仓库地址 ★ -->
-        <a href="https://github.com/lingxiaoge899-ux/LH-SAYS" target="_blank" class="github-btn">
-            <i class="fab fa-github"></i> 访问GitHub仓库
-        </a>
-    </div>
+<body class="flex flex-col min-h-screen">
+
+    <header class="py-10 text-center">
+        <h1 class="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">星辰影院发布页</h1>
+        <p class="mt-4 text-slate-400">建议收藏本页，防止丢失。永久地址：github.com/your-name</p>
+    </header>
+
+    <main class="flex-grow px-4 max-w-2xl mx-auto w-full">
+        
+        <div class="glass p-4 rounded-xl mb-6 text-sm text-yellow-200">
+            ⚠️ 提示：若当前线路无法打开，请尝试切换下方备用线路或使用加速器。
+        </div>
+
+        <div class="space-y-4">
+            <div class="glass p-5 rounded-2xl flex items-center justify-between hover:scale-[1.02] transition-transform">
+                <div>
+                    <h3 class="font-bold text-lg">官方主站 (电信/移动)</h3>
+                    <p class="text-xs text-slate-400 mt-1">推荐指数：⭐⭐⭐⭐⭐</p>
+                </div>
+                <div class="text-right">
+                    <span id="ping1" class="text-xs text-green-400 block mb-2">检测中...</span>
+                    <a href="https://v1.example.com" class="bg-blue-600 px-4 py-2 rounded-lg text-sm font-bold hover:bg-blue-500">立即进入</a>
+                </div>
+            </div>
+
+            <div class="glass p-5 rounded-2xl flex items-center justify-between hover:scale-[1.02] transition-transform">
+                <div>
+                    <h3 class="font-bold text-lg">备用线路 (联通/海外)</h3>
+                    <p class="text-xs text-slate-400 mt-1">推荐指数：⭐⭐⭐⭐</p>
+                </div>
+                <div class="text-right">
+                    <span id="ping2" class="text-xs text-green-400 block mb-2">检测中...</span>
+                    <a href="https://v2.example.com" class="bg-indigo-600 px-4 py-2 rounded-lg text-sm font-bold hover:bg-indigo-500">立即进入</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="mt-10 grid grid-cols-2 gap-4">
+            <a href="#" class="glass p-4 rounded-xl text-center hover:bg-slate-800">
+                <span class="text-2xl block mb-1">🤖</span>
+                <span class="text-sm">安卓下载</span>
+            </a>
+            <a href="#" class="glass p-4 rounded-xl text-center hover:bg-slate-800">
+                <span class="text-2xl block mb-1">🍎</span>
+                <span class="text-sm">苹果安装</span>
+            </a>
+        </div>
+    </main>
+
+    <footer class="py-10 text-center text-slate-500 text-xs">
+        <p>© 2026 星辰影院. All Rights Reserved.</p>
+    </footer>
+
+    <script>
+        // 极简测速逻辑：计算图片加载时间或资源请求时间
+        function testPing(url, elementId) {
+            const start = Date.now();
+            const el = document.getElementById(elementId);
+            
+            // 尝试请求站点的一个小图标
+            fetch(url, { mode: 'no-cors' }).then(() => {
+                const ms = Date.now() - start;
+                el.innerText = ms + "ms 极速";
+                el.className = "text-xs text-green-400 block mb-2";
+            }).catch(() => {
+                el.innerText = "超时";
+                el.className = "text-xs text-red-400 block mb-2";
+            });
+        }
+
+        // 调用测速（这里换成你真实的站点域名进行测试）
+        testPing('https://v1.example.com/favicon.ico', 'ping1');
+        testPing('https://v2.example.com/favicon.ico', 'ping2');
+    </script>
 </body>
 </html>
