--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>星辰影院 - 官方发布页</title>
+    <title>SA影院 - 官方发布页</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0f172a; color: white; }
@@ -13,8 +13,8 @@
 <body class="flex flex-col min-h-screen">
 
     <header class="py-10 text-center">
-        <h1 class="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">星辰影院发布页</h1>
-        <p class="mt-4 text-slate-400">建议收藏本页，防止丢失。永久地址：github.com/your-name</p>
+        <h1 class="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">SA影院发布页</h1>
+        <p class="mt-4 text-slate-400">建议收藏本页，防止丢失。永久地址：github.com/lingxiaoge899-ux</p>
     </header>
 
     <main class="flex-grow px-4 max-w-2xl mx-auto w-full">
@@ -60,7 +60,7 @@
     </main>
 
     <footer class="py-10 text-center text-slate-500 text-xs">
-        <p>© 2026 星辰影院. All Rights Reserved.</p>
+        <p>© 2026 SA影院. All Rights Reserved.</p>
     </footer>
 
     <script>
@@ -81,8 +81,9 @@
         }
 
         // 调用测速（这里换成你真实的站点域名进行测试）
-        testPing('https://v1.example.com/favicon.ico', 'ping1');
-        testPing('https://v2.example.com/favicon.ico', 'ping2');
+        testPing('https://https://lsjys66.com/', 'ping1');
+        testPing('https://https://lsjys88.com/', 'ping2');
     </script>
 </body>
+
 </html>
