--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SA影院 - 官方发布页</title>
+    <title>SA影视 - 官方发布页</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0f172a; color: white; }
@@ -14,7 +14,7 @@
 
     <header class="py-10 text-center">
         <h1 class="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">SA影院发布页</h1>
-        <p class="mt-4 text-slate-400">建议收藏本页，防止丢失。永久地址：github.com/lingxiaoge899-ux</p>
+        <p class="mt-4 text-slate-400">建议收藏本页，防止丢失。永久地址：github.com/lingxiaoge899-ux/LH-SAYS</p>
     </header>
 
     <main class="flex-grow px-4 max-w-2xl mx-auto w-full">
@@ -81,9 +81,8 @@
         }
 
         // 调用测速（这里换成你真实的站点域名进行测试）
-        testPing('https://https://lsjys66.com/', 'ping1');
-        testPing('https://https://lsjys88.com/', 'ping2');
+        testPing('https://lsjys66.com/', 'ping1');
+        testPing('https://lsjys88.com/', 'ping2');
     </script>
 </body>
-
 </html>
