--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container">
         <!-- 页面主标题：可修改成你的项目名 -->
-        <h1>LH-SA影视</h1>
-        <!-- SA影视 - 不只是看片，更是生活方式 -->
-        <p>专注于优质影视内容的综合影视平台 ，欢迎Star/Fork！</p>
+        <h1>LH-沙发TV</h1>
+        <!-- 沙发TV - 免费高清影视在线看 -->
+        <p>最新电影、电视剧、综艺、动漫一站式观看平台 ，欢迎Star/Fork！</p>
         <!-- GitHub跳转按钮：★ 必须修改这里的仓库地址 ★ -->
-        <a href="https://github.com/LHWebGroup/LH-SAYS/" target="_blank" class="github-btn">
+        <a href="https://github.com/lingxiaoge899-ux/LH-SFTV" target="_blank" class="github-btn">
             <i class="fab fa-github"></i> 访问GitHub仓库
         </a>
     </div>
